
* tableName parameter to writeDataTable to assign the table a name

* headerStyle parameter to writeDataTable for additional column names styling

* textRotation parameter to createStyle to rotate cell text

* functions addFilter & removeFilter to add filters to columns

* Headers & footers extended, can now be set with addWorksheet and setHeaderFooter.
  setHeader & setFooter deprecated.  

VIGNETTE

* section on write.xlsx in Introductory vignette

BUG FIXES

* Fix reading in of apostrophes

* Styling blank cells no longer corrupts workbooks

* read.xlsx now correctly reads sharedStrings with inline styling

* sharedStrings now exact matches true/false to determine logical values from workbooks.

openxlsx 2.0.15
----------------------------------------------------------------

NEW FEATURES

* writeData now style based on column class the same as writeDataTable

* Vignette "Formatting" for examples focussed on formatting

* Customizable date formatting with createStyle and also through option("openxlsx.dateFormat" = ...)

* Customizable POSIX formatting with createStyle and also through option("openxlsx.datetimeFormat" = ...)

* Generalised conditionalFormat function to complex expressions and color scales.

* writeData border type "all" to draw all borders and maintain column styling.

* Deprecated "sheets" and replaced with "names" function

* column class "scientific" to automatically style as scientific numbers

* writeData now handles additional object classes: coxph, cox.zph, summary.coxph1 from Survival package

BUG FIXES

* Invalid XML characters in hyperlinks now replaced.

* Encoding issues when writing data read in with read.xlsx

* scientific notation resulting in corrupt workbooks fix

* Multiple saves of Workbooks containing conditional formatting were corrupt.

* Latin1 characters now write correctly.

* logicals written as 0/1 instead of TRUE/FALSE

openxlsx 2.0.1
----------------------------------------------------------------

NEW FEATURES
