@@ -470,8 +470,8 @@ BEGIN_RCPP
 END_RCPP
 }
 // buildTableXML
-CharacterVector buildTableXML(std::string table, std::string ref, std::vector<std::string> colNames, bool showColNames, std::string tableStyle);
-RcppExport SEXP openxlsx_buildTableXML(SEXP tableSEXP, SEXP refSEXP, SEXP colNamesSEXP, SEXP showColNamesSEXP, SEXP tableStyleSEXP) {
+CharacterVector buildTableXML(std::string table, std::string ref, std::vector<std::string> colNames, bool showColNames, std::string tableStyle, bool withFilter);
+RcppExport SEXP openxlsx_buildTableXML(SEXP tableSEXP, SEXP refSEXP, SEXP colNamesSEXP, SEXP showColNamesSEXP, SEXP tableStyleSEXP, SEXP withFilterSEXP) {
 BEGIN_RCPP
     SEXP __sexp_result;
     {
@@ -481,7 +481,8 @@ BEGIN_RCPP
         Rcpp::traits::input_parameter< std::vector<std::string> >::type colNames(colNamesSEXP );
         Rcpp::traits::input_parameter< bool >::type showColNames(showColNamesSEXP );
         Rcpp::traits::input_parameter< std::string >::type tableStyle(tableStyleSEXP );
-        CharacterVector __result = buildTableXML(table, ref, colNames, showColNames, tableStyle);
+        Rcpp::traits::input_parameter< bool >::type withFilter(withFilterSEXP );
+        CharacterVector __result = buildTableXML(table, ref, colNames, showColNames, tableStyle, withFilter);
         PROTECT(__sexp_result = Rcpp::wrap(__result));
     }
     UNPROTECT(1);
